devscripts (2.10.66) UNRELEASED; urgency=low

  * bts: Fix ability to clear all tags on a bug.  (Closes: #539688)

 -- James Vega <jamessan@debian.org>  Mon, 19 Jul 2010 21:16:02 -0400

devscripts (2.10.65.1) unstable; urgency=low

  * debc:
    + Call changelog_parse correctly.  (Closes: #588947)
    + Update bash completion to complete *.changes files and package names.
      Thanks to Stefano Rivera for the patch.  (Closes: #584703)

 -- James Vega <jamessan@debian.org>  Tue, 13 Jul 2010 20:10:09 -0400

devscripts (2.10.65) unstable; urgency=low

  [ James Vega ]
  * Remove mergechanges from the set of commands which use completion of
    package names.  (Closes: #578167)
  * bts:
    + Use sendmail to send mails with extra headers when $(DEB)EMAIL aren't
      present.  (Closes: #577564)
    + Document that $(DEB)EMAIL must be in the environment to send email using
      either --mutt or --smtp-host.  (Closes: #578334)
    + Cleanup the help output and add some options which were only documented
      in the man page.
    + Allow specifying multiple tag modifiers (+, -, =) in one tag stanza.
      (Closes: #578118)
    + Document the valid values for the status key in the select command.
      (Closes: #583067)
  * debsnap:
    + Iterate over the list of files listed for a hash until we find one that
      matches the requested package.  (Closes: #584734)
    + Warn and move on to the next file if no files are present for a given
      hash or none match the requested package.  (Closes: #587265)
    + Handle error responses from snapshot.debian.org.  (Closes: #587217)
    + Use the basename of the file being downloaded as the name under which to
      save it.  (Closes: #584735)
    + Do not remove the destination directory when --force is given.  (Closes:
      #587517)
  * Remove --ignore-dirname options (and deprecation notices) from all
    scripts.  6.5 years is long enough to stop using that option.